--- a/стихи/Демьян Бедный. Бесы игривые — сиречь «Антихристы долгогривые».md
+++ b/стихи/Демьян Бедный. Бесы игривые — сиречь «Антихристы долгогривые».md
@@ -3,359 +3,392 @@ _Из ставки Колчака уфимскому священнику Спе
 
 _(Из документов, перехваченных у белогвардейцев)_
 
-**I.  
-
-Пишут мне часто «духовные» персоны,  
-Честят меня на все фасоны:  
-«Паки и паки,  
-Чтоб тебя повесили белые казаки!»  
-«Чтоб ты околел без покаяния  
-За все твои над нами надругания!»  
-«Пусть тебя поглотит огненная геенна!»  
-«Будь ты проклят до пятого колена!»
-
-Обозлились на меня попы, как осы;  
-Рвут, должно быть, на себе косы,  
-Швыряют о пол клобуки и камилавки,  
-Призывают на помощь небеса,  
-Сочиняя поносные словеса,  
-Острые, как булавки.
-
-Дошли попы до озверения:  
-До евангельского ль им смирения?  
-До незлобия ль Христа,  
-Ежели мошна пуста?  
-Ежели дошло до точки:  
-Обрядились поповские дочки  
-Не в шляпки — в платочки.
-
-Старые матушки  
-Штопают заплатушки,  
-А попадьи молодые —  
-Примеры худые!
-
-У отца Гавриила — Попадья задурила:  
-Помирившись с советской властью,  
-К комиссару воспылала страстью!  
-Чтоб ему, антихристу, околеть,  
-Никто не стал бы жалеть!
-
-А отец Павсикакий!  
-Стыд утративши всякий,  
-Позабыв о грядущем ответе,  
+Пишут мне часто духовные персоны.  
+Частят меня на все фасоны.  
+Паки и паки, чтоб тебя повесили белые казаки.  
+Чтоб ты околел без покаяния  
+За твои над нами надругания.  
+Пусть тебя поглотит огненная геенна.  
+Да будь ты проклят до пятого колена.  
+Обозлились на меня попы как осы.  
+Рвут должно быть на себе косы.  
+Бросают об пол клобуки да камилавки.  
+Призывают на помощь небеса  
+Сочиняя поносные словеса  
+Острые как булавки.  
+Дошли попы до озверения  
+До евангельского ль им смирения,  
+До незлобия ль Христа, ежели мошна пуста.  
+Ежели дошло до точки,  
+Облачились поповские дочки не в шляпки, в платочки.  
+Старые матушки штопают заплатушки.  
+А попадьи молодые ой примеры худые.  
+У отца Гавриила  
+Попадья задурила.  
+Примирившись с советской властью  
+Воспылала к комиссару страстью.  
+Чтоб ему антихристу околеть  
+Никто б не стал жалеть.  
+А отец Повсекакий  
+Стыд утративший всякий,  
+Позабыв о грядущем ответе  
 В уездном совете  
-На счётах побрякивает,  
-Перед комиссарами привскакивает!  
-Сладкогласно читает советские «Известия»!  
+На счётах побрякивает  
+Перед комиссарами привскакивает.  
+Сладкогласно читает советские известия.  
 Это ль пример для пасомых овец,  
-Ежли пастырь-отец  
-Дошел до такого бесчестия?!
-
-*******
-
-_Деньга попа купит и бога обманет.  
-Поп грехи скроет.  
-Поп со всего возьмет, а с попа ничего не возьмешь.  
-У попа не карманы, а мешки.  
-Не наше дело попа учить, пусть его чёрт учит!_
-
-_(Народные пословицы)_
-
-Ох, немало отцов зашаталося!  
+Ежели пастырь отец  
+Дошел до такого бесчестия.  
+Да немало отцов зашаталося,  
 Много с рясой охотно рассталося.  
-Но не все таковы, слава богу, попы.  
-Обреталися всё ж и такие столпы,  
-Что не падали духом —  
-Укреплялися слухом:  
-Вот дела Колчака, смотришь, сразу поправятся;  
-Вот деникинцы скоро появятся;  
-Вот еще что-то будет такое.
-
-Не сидят страстотерпцы такие в покое:  
-С осторожной оглядкой  
-Собирают украдкой  
-На беседы кулацких сынков,  
-И иных дураков  
-И балбесов —  
-Для защиты своих интересов.
-
-Они ждут, что настанет «день онь,  
-Егда грешники ввержены будут в огонь»,  
-То бишь, всякие там комитетчики,  
-Да лихие советчики —  
-То пожнут, что посеяли.  
-А попы б ужо по ветру прах их развеяли!
-
-Нет, покойный Колчак  
-Не совсем был дурак.  
-И не даром, боясь большевистской заразы,  
-Отдавал он такие приказы:
-
-_«Духовенство заставить ходить в окопы, беседовать о вере, поднимать религиозный экстаз, проповедовать поход против антихриста. Муллы тоже»._
-
-Все равно, православный ли поп иль мулла,  
-Мироедам поправить бы только дела!  
-Раз каснулося дело кармана,  
-Раз тугие дворянам пришли времена,  
-А простого народа не взять без обмана —  
-Генерал позовет на подмогу шамана,  
-Шептуна,  
-Шарлатана,  
-Всем цена им одна.
-
+Но не все таковы слава богу попы.  
+Обреталися все ж и такие столпы,  
+Что не падали духом  
+Укреплялися слухом.  
+Вот дела Колчака слышно скоро поправятся.  
+Вот деникинцы скоро появятся.  
+Вот еще что-то будет такое.  
+Не сидят страстотерпцы такие в покое.  
+С осторожной оглядкой собирают украдкой  
+На беседы кулацких сынков  
+И иных дураков и балбесов.  
+Для защиты своих интересов.  
+  
+Они ждут что настанет день онь.  
+Игда грешники ввергнуты будут в огонь.  
+То бишь всякие там комитетчики  
+Да лихие советчики.  
+То пожнут, что посеяли,  
+А попы б уже по ветру прах их развеяли.  
+Да покойный Колчак  
+Не такой был дурак  
+И не даром боясь большевистской заразы  
+Отдавал он такие приказы:  
+Духовенство должно ходить в окопы,  
+Вести беседы о вере,  
+Поднимать религиозный экстаз.  
+Проповедовать поход против антихриста.  
+Муллы тоже.  
+Всё равно православный ли поп иль мулла  
+Мироедам поправить бы только дела.  
+Раз коснулося дело кармана,  
+Раз тугие дворянам пришли времена  
+И простого народа не взять без обмана,  
+Генерал позовет на подмогу шамана, шептуна шарлатана.  
+Всем цена им одна.  
 Разбирать генералу не время,  
 Кто поможет взобраться ему на седло  
-И подержит почтительно стремя?  
-Жадно-злое поповское племя.
-
-И к «дающей руке» припадает «зело».  
-Злым дурманом попы бедный люд наш дурманят,  
-Дай попам «приношенье» — они зашаманят,  
+И поддержит почтительно стремя.  
+Жадно злое поповское племя  
+Ко дающей руке припадает зело.  
+Злым дурманом попы бедный люд наш дурманят.  
+Дай попам приношенье они зашаманят,  
 Запугают антихристом всех дураков.  
-Аль впервой им средь темных, глухих деревушек,  
-Обирая в конец бедняков,  
+Аль впервой им средь темных глухих деревушек,  
+Обирая вконец бедняков  
 Перед смертью запугивать адом старушек  
-И утративших ясность ума стариков?!
-
-**II.  
-
-Пономарь звонит, — мешается,  
-Дьякон в ризах заплетается,  
-Поп над книгой усмехается,  
-Он кадильчиком кадит, кадит, кадит,  
-Все на милую глядит, глядит, глядит.
-
-_(Народная песня)_
-
-Перед «пастырем» «стадо» испуганно хнычет,  
-«Пастырь» пальцем обкуренным в библию тычет,  
-И пропившимся голосом, сочно икая,  
-Изрыгает «святые» слова:  
-«Откровенье... глава... знать не важно, какая...  
-Есть такая глава:  
-«Дни настанут и труса, и мора, и глада,  
-И поднимет антихрист народы на брань...»  
-Эти дни наступили, любезные чада:  
-Преступает антихрист последнюю грань.  
-В откровении явственно всё предуказано!  
-Вот, что в нем об антихристе сказано:
-
-_«И придут комиссары... И дадут всем начертание на десней руце их и на челех их! Да никтоже возможет ни купити, ни продати, токмо кто имать начертание!»_
-
-Бабы охают: «Господи, Сусе-Христе!  
-Флаг кумачный — недаром у нас на шесте  
-Полыхает, как адское пламя.  
-Не иначе антихриста знамя!»
-
-*******
-
-Поп же Библию дальше насилует:  
-«Пусть антихрист строптивых не милует.  
+Да утративших ясность ума стариков.  
+  
+Перед пастырем стадо испуганно хнычет,  
+Пастырь пальцем обкуренным в библию тычет.  
+И пропившимся голосом сочно икая  
+Изрыгает святые слова:  
+Откровенье, глава знать не нужно какая  
+Есть такая глава.  
+Дни наступят и труса и мора и глада  
+И поднимет антихрист народы на брань.  
+Эти дни наступили, любезные чада.  
+Приступает антихрист последнюю грань.  
+В откровении явственно всё предуказанно.  
+Вот что в нем об антихристе сказано:  
+И придут комиссары и дадут всем начертания  
+На десной руце их или на челех их.  
+Да никтоже возможет ни купити ни продати  
+Токмо кто имут начертания.  
+Бабы ахают “господе сусе христе”  
+Флаг кумачный недаром у нас на шесте  
+Полыхает как адское пламя.  
+Не иначе антихриста знамя”.  
+Поп же библию дальше насилует:  
+Пусть антихрист строптивых не милует,  
 Пусть казнит вас, бросает в тюрьму,  
-Не сдавайтесь ему!
-
-Кто теперь устоит, тот спасется навеки.  
-Все, проклятых печатей не будет на ком —  
-Узрят славу Господню и райские реки!  
-Старцы мощь обретут, исцелятся калеки,  
-Напитавшися райским млеком!
-
-А о тех, у кого на челе иль деснице  
-Люциферова выжжена будет печать —  
-В откровении, братие, сказано сице:  
-В судный день они будут за все отвечать!
-
-Отомстится измена их карой Господней:  
-Быть с антихристом вместе им всем в преисподней,  
-В лютом адском огне, среди дьявольских рож!  
-Вот, себе что готовят своими руками  
-Все, кто днесь нарицается большевиками,  
-Коммунистами тож!»
-
-*******
-
-Поп во всю коммунистов разносит, ругает,  
+Не сдавайтесь ему.  
+Кто теперь устоит, тот спасется на веки.  
+Все проклятых печатей не будет на ком,  
+Узрят славу господню и райские реки.  
+Старцы мощ обретут исцелятся калеки  
+Напитавшися райским млеком.  
+А о тех у кого на челе и деснице  
+Люциферова выжжена будет печать,  
+В откровении братья сказано сица  
+“В страшный суд они будут за все отвечать”.  
+Отомстится измена их карой господней  
+Быть с антихристом вместе им всем в преисподней.  
+В лютом адском огне среди дьявольских рож.  
+Вот себе что готовят своими руками,  
+Те кто днесь именуются большевиками,  
+Коммунистами тож.  
+  
+Поп во всю коммунистов разносит, ругает.  
 Сам смеется в усы и лукаво мигает.  
-Молодайке Анисье мигает глазком:  
-«Ах, Анисья, Анисья, Анисья,  
-Хороша, небось, шуба-то лисья?  
-Еще то ль я, голубка, тебе подарю,  
-Когда церковь наполнится снова народом,  
-Когда денежки вновь притекут к алтарю,  
-И доход мой опять возрастет над расходом!»
-
-*******
-
-_Смелого ищи в тюрьме, глупого в попах.  
-Встретишь попа – нехорош выход._
-
-_(Народные пословицы)_
-
+Молодайке Анисье мигает глазком.  
+Эх Анисья Анисья Анисья  
+Хороша небось шуба то лисья.  
+Еще то ль я голубка тебе подарю,  
+Когда церковь наполнится снова народом.  
+Когда денежки вновь побегут к алтарю  
+И доход мой опять возрастет над расходом.  
+  
 Мироеду любому не трудно найти  
-Подходящего батю — лгуна и прохвоста.  
+Подходящего батю, лгуна и прохвоста.  
 Продувному отцу только деньги плати,  
-Так он в церкви — с амвона, на стогнах — с помоста,  
-На базаре — с телеги согласен кричать:  
-Про антихристово начертанье — печать —  
-И писать умудрится листовки,  
-На любые пускаясь уловки.
-
-Где подменит словцо, где — строку, где — главу,  
-Где читалось — «Сион», там подставит «Москву».  
-И докажет, что в книгах «божественных», старых —  
+А он в церкви с амвона, на стогнах с помоста.  
+На базаре с телеги согласен кричать  
+Про антихристово начертанье-печать.  
+И писать согласится листовки,  
+На любые пускаясь уловки.  
+Тут подменит словцо, тут строку, тут главу.  
+Где читалось Сион, там подставит Москву.  
+И докажет, что в книгах божественных старых  
 Есть прямое пророчество о комиссарах.  
-Иль Христу вложит слово такое в уста,  
-Что не ясно: за что ж распинали Христа?  
+И Христу вставит слово в такое в уста,  
+Что не ясно за что ж распинали Христа.  
 Если б жил с богачами он дружно,  
-Распинать его было б не нужно.
-
-И невольно, друзья, возникает вопрос:  
-Ну, а что, если б нынче явился Христос?  
-Настоящий Христос, неподдельный,  
-И учил бы тому, чему прежде учил?  
-От попов бы Голгофу он вновь получил,  
-Не в трехлетний бы срок, — в трехнедельный!
-
+Распинать его было б не нужно.  
+И невольно друзья возникает вопрос,  
+На а если б сегодня явился Христос,  
+Настоящий Христос не поддельный  
+И учил бы тому, чему раньше учил?  
+От попов он голгофу бы вновь получил  
+Не в трехлетний срок, в трехнедельный.  
 По три тысячи рубликов взявши с листа,  
-Настрочивши листовок мильон по заказу,  
-Блудословы-попы самого бы Христа  
-Превратили в антихриста сразу!  
+Настрочивши листовок мильён по заказу.  
+Блудословы попы самого бы Христа  
+Объявили антихристом сразу.  
 И с Христом, чтобы лучше упрятать концы,  
-Сотворили бы то же святые отцы,  
+Сотворили бы тоже святые отцы  
 Что с сектантами нашими часто творили:  
-В монастырской тюрьме б заморили!
-
-*******
-
-Нет, уж коль про антихриста речь нам вести,  
-То, ступивши на эту дорогу,  
-Всех попов нам пришлось бы, как мусор, смести,  
+В монастырской тюрьме б заморили.  
+  
+Нет уж коль про атихриста речь нам вести  
+То ступивши на эту дорогу,  
+Всех попов нам пришлось бы как мусор смести  
 Чтобы сделать угодное богу.  
-Потому что антихристы, это — попы:  
-Дышит ложью их каждое слово:  
-Не они ль, у господской жирея крупы,  
-Извратили ученье Христово?
-
-В годы скорби, в минувшие черные дни,  
+Потомучто антихристы это попы  
+Дышит ложью их каждое слово.  
+Не они ль у господской жирея крупы  
+Извратили ученье Христово?  
+В годы скорби в минувшие черные дни  
 За кого возносили молитвы они?  
 С кем попы в алтарях целовались?  
 Чьих великих щедрот добивались?  
-И кому угождали святые отцы?  
+И кому угождали святые отцы,  
 Чьи грехи покрывали искусно?  
-За какие услуги князья и купцы  
-Принимали попов, и кормили их вкусно,  
-И поили, купали их в пьяном вине?
-
-А бедняк — почему ощущал он тревогу  
-И скорей прижимался пугливо к стене,  
+За какие заслуги князья и купцы  
+Принимали попов и кормили их вкусно  
+И поили, купали их в пьяном вине?  
+А бедняк, почему ощущал он тревогу  
+И скорей прижимался пугливо к стене  
 Когда видел, что поп переходит дорогу?  
-Потому, что поповскую знал он подмогу,  
-Её гнет на своей испытавши спине!
-
-*******
-
-О попах говорят очень часто скабрезности:  
-Дескать, бабники все, жеребцы, шатуны;  
-Но имейте же, братцы, побольше серьезности:  
-Грех поповский пусть знают поповы штаны.
-
-Ежли батя облапит порой богомолку,  
-То творит он сие втихомолку:  
-С богомолкой целуется поп иль кусается, —  
+Потому что поповскую знал он подмогу  
+Её гнет на своей испытавши спине.  
+  
+О папах говорят очень часто скабрезности.  
+Дескать, бабники все, жеребцы, шатуны.  
+Но имейте же братцы побольше серьезности  
+Грех поповский пусть знают поповы штаны.  
+Если батя облапит порой богомолку,  
+То творит он сие втихомолку.  
+С богомолкой целуется поп иль кусается  
 Это дело нас мало касается.  
-Это дело касается больше мужей:  
-Пусть приставят к бабенкам своим сторожей,  
-Чтоб козла в огород не пускали,  
-А поймавши, хороший бы дали урок.
-
-Впрочем, многих попов уж за гриву таскали.  
+Это дело касается больше мужей.  
+Пусть приставят к бабенкам своим сторожей.  
+Чтоб козла в огород не пускали  
+А поймавши, хороший бы дали урок.  
+Впрочем, многих попов уж за гриву таскали,  
 А большой ли от этого прок?  
-Отрастают опять их пушистые гривы,  
-Все попы от природы, беда, как блудливы,  
-И у нас как-то свыклися с этим вполне:  
-Чем блудливее поп — тем он в большей цене,  
-Особливо у барынь дородных, зане  
-Обретают они у подобного бати  
-Превеликий источник святой благодати.
-
-*******
-
-Леший с ним, с блудодейством духовных отцов,  
-Ведь, в конце-то концов,  
-Превратили мы сами попов в жеребцов,  
-Развращая их нашей поблажкой огульной.  
-На довольстве мирском богомолец иной  
-Знай, нагуливал жир, словно бык племенной,  
-Привыкая к обжорству и жизни разгульной.
-
-Но не в этом я главную вижу беду:  
-Дармоедов мы скоро приучим к труду,  
-А пока — они плохо с работой свыкаются,  
-Рвут упряжку и крепко брыкаются.
-
-Еще помнят попы благодатные дни,  
-Когда были и сыты и пьяны они:  
-Раз в неделю обедню отбрякай,  
-О загробных делах покалякай,  
+Отрастают опять их пушистые гривы  
+Все попы от природы беда как блудливы.  
+И у нас как то свыклися с этим вполне.  
+Чем блудливее поп,тем о больше в цене.  
+Особливо у барынь дородных.  
+Зане обретают они у подобного бати  
+Превосходный источник святой благодати.  
+Леший с ним, с блудодейством духовных отцов.  
+Ведь в конце-то концов превратили мы сами попов жеребцов  
+Разврящая их нашей поблажкой огульной.  
+На довольстве мирском, богомолец иной  
+Знай нагуливал жир словно бык племенной.  
+Привыкая к обжорству и к жизни разгульной.  
+Но не в этом я главную вижу беду.  
+Дармоедов мы скоро приучим к труду.  
+Но пока они плохо с работой свыкаются,  
+Рвут упряжку и крепко брыкаются.  
+Еще помнят попы благодатные дни  
+Когда были и сыты и пьяны они.  
+Раз в неделю обедню отбрякай,ремиоава  
+О загробных делах покалякай.  
 Старушонок водицей святой покропи,  
-А потом, после этакой трудной работы,  
-Завались с попадьей — и блаженно храпи,  
-С понедельника спи до субботы.
-
-Ни забот никаких для попа, ни хлопот:  
-Кто-то льет за попа, не жалеючи, пот,  
-Кто-то рвет свои жилы, о бате заботится —  
-Знает батя: по воле каких-то судеб  
-Для него сам собою посеется хлеб.  
-Сам собою сберется и сам обмолотится.
-
-Все в порядке, хоть батя не двинул рукой,  
+А потом после эдакой трудной работы,  
+Завались с попадьёй и блаженно храпи,  
+С понедельника спи до субботы.  
+Ни забот никаких у попа, ни хлопот.  
+Кто-то льет за попа не жалеючи пот,  
+Кто-то рвёт свои жилы о бате заботится.  
+Знает батя по воле каких-то судеб  
+Для него сам собою посеется хлеб  
+Сам собою сберется и сам обмолотится.  
+Всё в порядке хоть батя не двинул рукой.  
 Так не диво, что поп после жизни такой  
-Вряд ли скоро к труду приохотится.  
-Батя знал свое дело: возок снарядить,  
-Взять кошель покрупней и поглубже мешочки,  
-И по избам с крестом и кадилом ходить.
-
-**(далее следует фрагмент, который не выдают гуглы-яндексы, данный фрагмент окрашен градусом справедливой классовой ненависти, непозволительной для русской интеллигенции, которая заведует информационной повесткой)**
-
-Но внезапно открылось целебное средство:  
+Врят ли скоро к труду приохотится.  
+  
+Батя знал свое дело. Возок снярядить  
+Взять кошель покрупней и поглубже мешочки  
+И по избам с крестом и кадилом ходить  
+Да заглядывать бабам в горшочки.  
+Смотришь, батя домой, что в берлогу медведь.  
+Тащит на зиму всякую справу и снедь.  
+От даяний у бати весь дом чуть не ломится.  
+Ублаживши попа изнуренный народ  
+Голодает справляет посты круглый год.  
+Люд постится, а батя скоромится.  
+От того-то попам нынче жизнь и не всласть.  
+От того-то попы про советскую власть  
+И не скажут хорошего слова.  
+Что лишили мы их дарового улова.  
+От того и мечтает любой иерей  
+Чтобы старый порядок вернулся скорей.  
+От того то попы в деревнях и мутят,  
+Извращая писанье во всю блудословят.  
+Задурить они головы наши хотят,  
+Они новую петлю народу готовят  
+И внушают слепцам простецам и глупцам  
+Чтобы те злолукавых словес не отринули,  
+И на горе себе и на благо отцам,  
+Себе сами б ту петлю на шею накинули.  
+Вас попы никогда не научат добру,  
+Дармоедам лишь барская власть по нутру.  
+Баре жаждут упиться народною кровью.  
+Растоптать превратить нас в безжизненный труп.  
+Знайте, братья, что трижды, четырежды глуп.  
+Кто поверит попу и его блудословью.  
+  
+О распутстве отцов я б при случае мог  
+Поучительных много поведать историй.  
+Всем известно, как некогда в царский чертог  
+Пробрался чудотворец Распутин Григорий.  
+Блудотворца ласкала царица сама,  
+В нем искала конечно она не ума.  
+Кем же был подготовлен он к роли великой?  
+Той же черной поповско монашеской кликой.  
+Их орудием был плут кулак продувной,  
+И с троицей о старце они насказали.  
+Когда старец же спутался с царской женой  
+То они ж ему пятки умильно лизали.  
+И кадили ему и учили его  
+Где кому что сказать, добиваться чего.  
+Чтобы распутникам с помощью этого Гришки  
+Поудобней обделывать было делишки.  
+Всё пускали прохвосты церковные в ход  
+И распутную всюду плодили заразу.  
+А когда поваливши царей и господ  
+Стал хозяином жизни своей сам народ,  
+Тут попы про антихриста вспомнили сразу.  
+Тут за библию сразу схватились они,  
+Про усохшее древо плетут про секиру.  
+И про адские чтото лопочут огни.  
+Им теперь подлецам не до жиру.  
+У одних привыкать нет охоты к труду.  
+У других в блудодейство ушло всё здоровье.  
+Так теперь чтоб избыть им лихую беду  
+В ход пускают они блудословье.  
+Блудословить большие попы мастера.  
+Мастера простецов усыплять и тревожить.  
+Нет не шутки поповская злая игра.  
+Поп вреднейшая тварь и давно нам пора  
+Эту сволочь покруче стреножить  
+И за первую подлость нещадно карать.  
+Самых злых проповедников чёрная рать  
+Каждый день, каждый час напуская туману,  
+Служит словом и делом враждебному стану.  
+  
+Для примера я дам не худой образец.  
+Как в деревне одной некий пастырь овец  
+Поучал голосочком дрожащим.  
+Знайте братья, что всяка душа спасена,  
+Повинуясь властем придержащим.  
+Раздирается смутой наша страна.  
+Много нынче властей, а должна быть одна.  
+Так какая ж из этих властей настоящая?  
+Учиненная господом власть придержащая?  
+Как узнаем ее и другим предпочтем,  
+Избегая с властями нечистыми связи?  
+У апаостола Павла сейчас мы рочтем,  
+Ясно сказано власть это князи.  
+Князи сказано добрым делам не в боязнь  
+Лишь за злые дела их жестокая казнь.  
+Настоящий верховный правитель  
+Он за злое суровый отмститель.  
+Повинуйтесь ему,есть бо божий слуга  
+Его милость на вас,его меч на врага.  
+С коммунистами вот с кем правитель воюет.  
+Из-за них Русь святая горюет.  
+Городские рабочие,рваная шваль,  
+Беспорядок они завели беспримерный.  
+Перевешать бы их половину не жаль.  
+И духовный правитель, наш вождь благоверный,  
+Там где им утверждалася правая власть,  
+Перевешал рабочих немалую часть.  
+И хоть дьявол предал большевизму живучесть,  
+Всех рабочих не минет печальная участь.  
+Знайте, эти враги придержащим властям,  
+Когда нашим правителем Русь по частям  
+Снова собрана будет в единое тело.  
+Своей кровью ответят за черное дело.  
+  
+Батя так волновался, вспотел даже весь.  
+Был случайно рабочий путиловец здесь.  
+С отцом матерью в храмике тесном.  
+Златоуст по заслугам оценен и днесь,  
+Обретается в царстве небесном.  
+Весь приход потерявши попа горевал,  
+Но внезапно открылось целебное средство.  
 В алтаре у попа оказался подвал,  
-А в подвале — большое наследство:  
+А в подвале большое наследство.  
 Настоящий ломбард иль богатый амбар,  
 Сундуки и тюки с самым разным товаром.  
 Вся деревня разинула рот на товар  
-И забыла всю скорбь, получив его даром.  
-Сверх товара (под божьим престолом как раз)  
-Оказалися здесь по какому-то чуду  
-Пулемет и винтовок до сотни на глаз.  
+И забыла всю скорбь получив его даром.  
+Средь товара под божьим престолом как раз,  
+Оказалися здесь по какому-то чуду,  
+Пулемёт и до сотни винтовок на глаз.  
 Тут же были патроны навалены в груду.  
-Поп, товары копивши, был явный мытарь.  
-А зачем в арсенал превратил он алтарь,  
-Объяснять я подробно не буду.
-
-Ясно: поп поджидал «предержащих властей»,  
-И должно, не проверив желанных вестей  
-О ближайшем приходе дворянского племени,  
-Стал «готовить» народ прежде времени.  
-И за это нежданную мзду получил —  
-Прежде времени в бозе почил.
-
-Не во всех разбираются бабы вопросах:  
-Собралась возле церкви старушек толпа,  
-Со слезами лобзали несчастные посох  
-Двадцать лет утешавшего всех их попа.  
-Этот посох — увы! — довершил их напасти.  
-Две старушки, заспорив, наследье отца  
-Потянули с того и другого конца, —  
-Раз! — и пастырский посох распался на части:  
-Глядь — у бабки одной  
-Только верх дупляной,  
-У другой (оказалася палка с «секретом!»),  
-У другой — черенок  
-И аршинный клинок,  
-Нож такой, по-французски зовется «стилетом».  
-С перепугу сомлела старушка одна,  
-Остальные вскричали на крик: — «Вот те на»!  
-«Вот он посох какой изобрел, сатана!»  
-«Неча молвить, хорош был покойник!  
-Сверху ряса, под рясой — разбойник!»
+Поп,товары копивший был явный мытарь  
+А зачем в арсенал превратил он алтарь  
+Объяснять я подробно не буду.  
+Ясно, поп ожидал придержащих властей.  
+И,видать,не проверив желанных вестей  
+О ближайшем приходе дворянского племени.  
+Стал готовить народ раньше времени.  
+И за это нежданную мзду получил,  
+Раньше времени в бозе почил.  
+  
+Не во всех разбираются бабы вопросах,  
+Собралась возле церкви старушек толпа.  
+Со слезами лобзали несчастные посох,  
+Двадцать лет удешавшего всех их попа.  
+Этот посох увы довершил их напасти.  
+Две старушки заспорив наследье отца  
+Потянули с того и другого конца,  
+Раз и посох распался на части.  
+Глядь у бабки одной только верх дупляной  
+У другой, оказалася палка с секретом,  
+У другой черенок и аршинный клинок.  
+Нож такой по французски зовется стилетом.  
+С перепугу сомлела старушка одна  
+Остальные вскричали на крик, вот те на  
+Вот он посох какой изобрел сатана  
+Неча молвить хорош был покойник  
+Сверху ряса, под рясой разбойник.  
+  
+Спаси господи, спаси господи а за поясом кистень.
