add some pictures

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -69,10 +69,29 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 +------+                      +-------+
 
 *** Запись
-
-
-
-
++------+                      +-------+
+|  A   | 3. Обн. кэша         | CACHE |
+|  P   | -------------------> |       |
+|  P   |                      +-------+
+|  L   |
+|      | 1. Сохраняем в базу  +-------+
+|      | -------------------> |       |
+|      | 2. Получаем ответ    |  DB   |
+|      | <------------------- |       |
++------+                      +-------+
 
 ** cache through
+Сквозное кэширование - все запосы приложения проходят через кэш
+
++-----+                    +-----+                            +-----+
+|  A  | 1.читаем из кэша   |  C  | 2. если нет, читаем из БД  |     |
+|     | -----------------> |  A  | -------------------------> |  B  |
+|  P  |                    |  C  |                            |  D  |
+|  L  | 4. отдаём данные   |  H  | 3. сохраняем данные в кэш  |     |
+|     | <----------------- |  E  | <------------------------- |     |
++-----+                    +-----+                            +-----+
+
+"+": сервис работает только с кэшем
+"-": если кэш упадёт - то приложение не работает
 ** cache ahead
+Опережающее кэширование. Запросы на чтение всегда идут только в кэш, никогда не попадая в БД напрямую.
