add caching info

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -85,7 +85,7 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 
 +-----+                    +-----+                            +-----+
 |  A  | 1.читаем из кэша   |  C  | 2. если нет, читаем из БД  |     |
-|     | -----------------> |  A  | -------------------------> |  B  |
+|  P  | -----------------> |  A  | -------------------------> |  B  |
 |  P  |                    |  C  |                            |  D  |
 |  L  | 4. отдаём данные   |  H  | 3. сохраняем данные в кэш  |     |
 |     | <----------------- |  E  | <------------------------- |     |
@@ -95,3 +95,36 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 "-": если кэш упадёт - то приложение не работает
 ** cache ahead
 Опережающее кэширование. Запросы на чтение всегда идут только в кэш, никогда не попадая в БД напрямую.
+
++-----+                    +-----+                            +-----+
+|  A  | читаем из кэша     |  C  | периодически записываем    |     |
+|  P  | -----------------> |  A  | -------------------------> |  B  |
+|  P  |                    |  C  |                            |  D  |
+|  L  |  отдаём данные     |  H  |                            |     |
+|     | <----------------- |  E  |                            |     |
++-----+                    +-----+                            +-----+
+
+"+": быстрое чтение и запись
+"-": если кэш упал, то ничего не работает и часть данных пропала
+
+* Алгоритмы вытеснения данных
++ случайно
++ FIFO - очередь
++ LIFO - стэк
++ LRU - вытесняется тот элемент, к которому дольше всего не было обращений
++ MRU - вытесняется тот элемент, к которому только что обращались
++ LFU - вытесняется тот, к которому реже всего обращаются
++ Алгоритм Белади (оптимальный)
+  не принимый на практике, теоретический идеальный алгоритм
+  Если бы мы знали, когда будет обращение к каждому элементу, то вытесняли бы самый поздний
++ Second chanse - при обращении выставляется бит присутствия, а при вытеснении удаляется элемент из начала очереди, если этот бит = 0. Если бит = 1, то элемент переносится в конец очереди.
++ Clock - тот же second chanse, только не нужно передвигать элементы. Они расположены по кругу (как в часах) и передвигается курсор (стрелка) от элементу к элементу.
++ 2Q - есть 2 очереди. Элементы из 1-й очереди никуда не двигаются. Элементы из 2 очереди уходят в =LRU=, вытесненные из 2-й очереди удаляются. Из 1-й очереди переходят во вторую.
++ SLRU - segmented lru. Есть 3 разных уровня LRU - hot, warm, cold. При обращении элементы передвигаются между ними.
++ TLRU - на каждый элемент еще вешается TTL
++ LRU-K - LRU учитывается только после k-того обращения к элементу.
+
+* Инвалидация данных
++ по TTL - основная проблема - выбор времени жизни
++ JITTER - если записи становятся недействительными обновременно и большом количестве, то источник данных может пострадать (БД). Jitter - это случайная величина, которая добавляется к ttl.
++ thundering herb problem -
