add losted text

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -127,4 +127,8 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 * Инвалидация данных
 + по TTL - основная проблема - выбор времени жизни
 + JITTER - если записи становятся недействительными обновременно и большом количестве, то источник данных может пострадать (БД). Jitter - это случайная величина, которая добавляется к ttl.
-+ thundering herb problem -
++ thundering herb problem - резкий рост нагрузки на источник данных, когда много потоков/процессов/сервисов одновременно запрашивают данные и получают cache miss, а затем каждый из них выполняется запрос к БД. Решается блокировками и proxy.
++ Инвалидация по событию
+
+* Версионирование кэша
+К ключу добавляется тэг версии. Затем данные инвалидируются для конкретной версии.
