--- a/docker/docker.org
+++ b/docker/docker.org
@@ -43,3 +43,171 @@
 Контейнер определяется образом и настройками, указанными при его создании и запуске. При удалении контейнера его состояние также удаляется. Этого можно избежать с помощью хранилища данных.
 
 * Команды и флаги
+** docker run
+Команда =docker run= используется для запуска контейнера. Это основная и потому наиболее часто используемая команда.
+#+begin_verse
+# сигнатура
+docker run [OPTIONS] IMAGE[:TAG|@DIGEST] [COMMAND] [ARG...]
+# основные настройки (флаги)
+-d - запуск контейнера в качестве отдельного процесса
+-p - публикация открытого порта в интерфейсе хоста (HOST:CONTAINER)
+# например
+-p 3000:3000
+-t - выделение псевдотерминала
+-i - оставить STDIN открытым без присоединения к терминалу
+--name - название контейнера
+--rm - очистка системы при остановке/удалении контейнера
+--restart - политика перезапуска - no (default) | on-failure[:max-retries] | always | unless-stopped
+-e - установка переменной среды окружения
+-v - привязка распределенной файловой системы (name:/path/to/file)
+# например
+-v mydb:/etc/mydb
+-w - установка рабочей директории
+#+end_verse
+
+** docker build
+Команда =docker build= используется для создания образа на основе файла =Dockerfile= и =контекста=.
+=Контекст= - это набор файлов, находящихся в локации, определенной с помощью =PATH= или =URL=.
+=PATH= - это директория в нашей локальной системе, а =URL= - это удаленный репозиторий. =Контекст= сборки обрабатывается рекурсивно, поэтому =PATH= включает как директорию, там и все ее поддиректории, а =URL= - как репозиторий, так и все его субмодули.
+Для исключения файлов из сборки образа используется =.dockerignore= (синтаксис этого файла похож на =.gitignore=).
+#+begin_verse
+# сигнатура
+docker build [OPTIONS] PATH | URL | -
+#+end_verse
+
+Создание образа:
+#+begin_verse
+# в качестве контекста сборки используется текущая директория
+docker build .
+#+end_verse
+
+Использование репозитория в качестве контекста (предполагается, что =Dockerfile= находится в корневой директории репозитория):
+#+begin_verse
+docker build github.com/creack/docker-firefox
+#+end_verse
+
+#+begin_verse
+docker build -f ctx/Dockerfile http://server/ctx.tar.gz
+#+end_verse
+В данном случае http://server/ctx.tar.gz отправляется демону, которые загружает и извлекает файлы. Параметр =-f ctx/Dockerfile= определяет путь к =Dockerfile= внутри =ctx.tar.gz=.
+
+Чтение =Dockerfile= из =STDIN= без контекста:
+#+begin_verse
+docker build - < Dockerfile
+#+end_verse
+
+Добавление тега к образу:
+#+begin_verse
+docker build -t myname/my-image:latest .
+#+end_verse
+
+Определение =Dockerfile=:
+#+begin_verse
+docker build -f Dockerfile.debug .
+#+end_verse
+
+Экспорт файлов сборки в директорию =out=:
+#+begin_verse
+docker build -o out .
+#+end_verse
+
+Экспорт файлов сборки в файл =out.tar=:
+#+begin_verse
+docker build -o - . > out.tar
+#+end_verse
+
+** docker exec
+Команда =docker exec= используется для выполнения команды в запущенном контейнере.
+#+begin_verse
+# сигнатура
+docker exec [OPTIONS] CONTAINER COMMAND [ARG...]
+# основные флаги
+-d - выполнение команды в фоновом режиме
+-e - установка переменной среды окружения
+-i - оставить `STDIN` открытым
+-t - выделение псевдотерминала
+-w - определение рабочей директории внутри контейнера
+#+end_verse
+
+Пример:
+#+begin_verse
+# -U - это пользователь, которым по умолчанию является root
+docker exec -it postgres psql -U postgres
+#+end_verse
+
+** docker ps
+Команда =docker ps= используется для получения списка (по умолчанию только запущенных) контейнеров.
+
+#+begin_verse
+# сигнатура
+docker ps [OPTIONS]
+# основные флаги
+-a - показать все контейнеры (как запущенные, так и остановленные)
+-f - фильтрация вывода на основе условия (`id`, `name`, `status` и т.д.)
+-n - показать n последних созданных контейнеров
+-l - показать последний созданный контейнер
+# пример получения списка приостановленных контейнеров
+docker ps -f 'status=paused'
+#+end_verse
+
+Для получения списка образов используется команда =docker images=.
+
+** Команды управления
+
+# запуск остановленного контейнера
+docker start CONTAINER
+
+# приостановление всех процессов, запущенных в контейнере
+docker pause CONTAINER
+
+# остановка контейнера
+docker stop CONTAINER
+
+# "убийство" контейнера
+docker kill CONTAINER
+
+# перезапуск контейнера
+docker restart CONTAINER
+
+# удаление остановленного контейнера
+docker rm [OPTIONS] CONTAINER
+# основные флаги
+-f - принудительное удаление (остановка и удаление) запущенного контейнера
+-v - удаление анонимных томов, связанных с контейнером
+# пример удаления всех остановленных контейнеров
+docker rm $(docker ps --filter status=exited -q)
+
+# удаление образа
+docker rmi IMAGE
+
+# управление образами
+docker image COMMAND
+
+# управление контейнерами
+docker container COMMAND
+
+# управление томами
+docker volume COMMAND
+
+# управление сетями
+docker network COMMAND
+
+# управление docker
+docker system COMMAND
+
+** Другие команды
+Для получения логов запущенного контейнера используется команда =docker logs=:
+
+docker logs [OPTIONS] CONTAINER
+# основные флаги
+-f - следование за выводом
+-n - n последних строк
+
+Для удаления всех неиспользуемых данных (контейнеры, сети, образы и, опционально, тома) используется команда =docker system prune=. Основные флаги:
+
+-a - удаление всех неиспользуемых образов, а не только обособленных (dangling)
+--volumes - удаление томов
+
+*Предостережение*: применять эту команду следует с крайней осторожностью, поскольку удаленные данные не подлежат восстановлению.
+
+[[https://docs.docker.com/reference/cli/docker/][Полный список команд и флагов.]]
